--- a/module1-join-and-reshape-data/Eric_Rivetna_LS_DS_121_Join_and_Reshape_Data_Assignment.ipynb
+++ b/module1-join-and-reshape-data/Eric_Rivetna_LS_DS_121_Join_and_Reshape_Data_Assignment.ipynb
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "5MsWLLW4Xg_i",
         "colab_type": "code",
-        "outputId": "5f22075d-f142-413d-df98-232a69fb6233",
+        "outputId": "81267072-5d52-4cd1-d9d7-496eeb569c7e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -74,21 +74,21 @@
       "source": [
         "!wget https://s3.amazonaws.com/instacart-datasets/instacart_online_grocery_shopping_2017_05_01.tar.gz"
       ],
-      "execution_count": 260,
+      "execution_count": 472,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2019-08-13 10:53:18--  https://s3.amazonaws.com/instacart-datasets/instacart_online_grocery_shopping_2017_05_01.tar.gz\n",
-            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 54.231.73.18\n",
-            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|54.231.73.18|:443... connected.\n",
+            "--2019-08-13 12:12:06--  https://s3.amazonaws.com/instacart-datasets/instacart_online_grocery_shopping_2017_05_01.tar.gz\n",
+            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.160.69\n",
+            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.160.69|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 205548478 (196M) [application/x-gzip]\n",
             "Saving to: ‘instacart_online_grocery_shopping_2017_05_01.tar.gz’\n",
             "\n",
-            "instacart_online_gr 100%[===================>] 196.03M  33.9MB/s    in 6.2s    \n",
+            "instacart_online_gr 100%[===================>] 196.03M  46.3MB/s    in 4.6s    \n",
             "\n",
-            "2019-08-13 10:53:25 (31.8 MB/s) - ‘instacart_online_grocery_shopping_2017_05_01.tar.gz’ saved [205548478/205548478]\n",
+            "2019-08-13 12:12:11 (42.6 MB/s) - ‘instacart_online_grocery_shopping_2017_05_01.tar.gz’ saved [205548478/205548478]\n",
             "\n"
           ],
           "name": "stdout"
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "gfr4_Ya0XkLI",
         "colab_type": "code",
-        "outputId": "1871d9dd-5417-45c3-cba8-c90f87bebb99",
+        "outputId": "0a94af34-364e-4083-950c-e5b43aaa7ffb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -109,7 +109,7 @@
       "source": [
         "!tar --gunzip --extract --verbose --file=instacart_online_grocery_shopping_2017_05_01.tar.gz"
       ],
-      "execution_count": 261,
+      "execution_count": 473,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "N4YyGPNdXrT0",
         "colab_type": "code",
-        "outputId": "bfa0ce4d-3978-42ef-b0fc-da8132ce0f90",
+        "outputId": "92e0397d-4ddc-41d9-80b1-3d19c94259de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -146,12 +146,12 @@
       "source": [
         "%cd instacart_2017_05_01"
       ],
-      "execution_count": 262,
+      "execution_count": 474,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/instacart_2017_05_01/instacart_2017_05_01/instacart_2017_05_01/instacart_2017_05_01\n"
+            "/content/instacart_2017_05_01/instacart_2017_05_01/instacart_2017_05_01/instacart_2017_05_01/instacart_2017_05_01\n"
           ],
           "name": "stdout"
         }
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "b26wmLUiXtlM",
         "colab_type": "code",
-        "outputId": "ec3496f5-e28d-4f2d-bc63-28868ec0040b",
+        "outputId": "eb8887ae-a0b1-43d4-e82f-40f673d74654",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -171,7 +171,7 @@
       "source": [
         "!ls -lh *.csv"
       ],
-      "execution_count": 263,
+      "execution_count": 475,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +252,7 @@
       "metadata": {
         "id": "vA4Z65aqkkjn",
         "colab_type": "code",
-        "outputId": "cc0e6887-49a4-4258-c3ab-229426f2b57b",
+        "outputId": "952653dd-c63a-431b-cbf3-7d1b1e3b9de8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 952
@@ -280,6 +280,8 @@
         "print('Products Table:'\n",
         "     '\\n')\n",
         "print(products.head())\n",
+        "\n",
+        "\"\"\"Items not needed for prompt\"\"\"\n",
         "# print('\\n'\n",
         "#       '\\n')\n",
         "# # print('Aisles Table')\n",
@@ -289,7 +291,7 @@
         "# print('Departments Table')\n",
         "# print(departments.head())"
       ],
-      "execution_count": 265,
+      "execution_count": 477,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +376,7 @@
       "metadata": {
         "id": "jomxbIK4ll5u",
         "colab_type": "code",
-        "outputId": "b7987f2e-af70-4d6f-afdc-ee21aa4b4bf9",
+        "outputId": "8ec76e48-5203-4f00-c7ac-e0267fb12b0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -388,7 +390,7 @@
         "# orders_table_col = orders_table.columns.get_values().tolist()\n",
         "# print(orders_table_col)\n"
       ],
-      "execution_count": 266,
+      "execution_count": 478,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,13 +449,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "c6ea0b04-f9ce-4e96-b0f1-e64036f1675a"
+        "outputId": "53dbc4af-c8a3-4696-98a2-0bcd3840cc06"
       },
       "source": [
         "#Checking for null values in total_product_order table\n",
         "print(total_product_order.isnull().sum())"
       ],
-      "execution_count": 269,
+      "execution_count": 481,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +482,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "6b1e84bd-98c0-4066-bd6c-89a77a7a6ad4"
+        "outputId": "cee9f0d7-0ca0-4898-9f94-29af17bc2407"
       },
       "source": [
         "#Creating a DataFrame for top 10 Product Orders \n",
@@ -502,6 +504,8 @@
         "      '\\n')\n",
         "print(top10_df)\n",
         "\n",
+        "\n",
+        "#Variables for Graphing\n",
         "top10Prod = top10_df['product_name']\n",
         "top10Order = top10_df['order_frequency']\n",
         "  \n",
@@ -512,7 +516,7 @@
         "  \n",
         "\n"
       ],
-      "execution_count": 280,
+      "execution_count": 482,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +548,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 613
         },
-        "outputId": "e6b67264-9063-41a8-bc49-7660607c3bca"
+        "outputId": "f05427b3-cf3b-4893-ed7c-3546dc70b590"
       },
       "source": [
         "sns.set_style('white')\n",
@@ -555,7 +559,7 @@
         "plt.xlabel('Ordered Products', fontsize=14)\n",
         "plt.show()"
       ],
-      "execution_count": 290,
+      "execution_count": 483,
       "outputs": [
         {
           "output_type": "display_data",
@@ -621,7 +625,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "384ea259-5e3a-453b-bd5c-a70e24f4a00b"
+        "outputId": "1493ef1f-b7c5-41bf-8250-d5faecd9e61e"
       },
       "source": [
         "table2col = table2.columns.to_list()\n",
@@ -631,7 +635,7 @@
         "print(table2)\n",
         "\n"
       ],
-      "execution_count": 381,
+      "execution_count": 485,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,12 +671,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "f7b31ab5-2116-47a3-9643-2affbf5e0d22"
+        "outputId": "a1ec0196-758c-4077-9736-4497c7bde255"
       },
       "source": [
         "print(tidy2)"
       ],
-      "execution_count": 383,
+      "execution_count": 487,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,12 +729,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "7259aaf7-9e2e-48f7-a9d8-d6b52478a66a"
+        "outputId": "5d6eaaca-b52b-4e5b-b3cf-e0511d6172bf"
       },
       "source": [
         "print(tidy2)"
       ],
-      "execution_count": 387,
+      "execution_count": 490,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,12 +773,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 173
         },
-        "outputId": "6c51d920-f864-494d-da80-0efad41c0d9c"
+        "outputId": "5cd52e9d-05c7-44c0-e554-b3a5fdec728a"
       },
       "source": [
         "tidy2_pivot"
       ],
-      "execution_count": 391,
+      "execution_count": 492,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -838,7 +842,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 391
+          "execution_count": 492
         }
       ]
     },
@@ -874,7 +878,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 544
         },
-        "outputId": "d9d4b8f6-cbab-4f1f-9712-c8d656880db1"
+        "outputId": "7a3944e0-e0da-44b8-9d56-e98eb6b4544f"
       },
       "source": [
         "print('flights shape:', flights.shape,\n",
@@ -888,7 +892,7 @@
         "      '\\n')\n",
         "print(flights.tail(10))\n"
       ],
-      "execution_count": 393,
+      "execution_count": 494,
       "outputs": [
         {
           "output_type": "stream",
@@ -938,13 +942,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "4b167989-d5fd-4e2c-ef6d-56187287ea83"
+        "outputId": "98808916-eaea-4e61-9569-86563212179b"
       },
       "source": [
         "# Checking for null values\n",
         "print(flights.isnull().sum())"
       ],
-      "execution_count": 394,
+      "execution_count": 495,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,15 +984,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 452
         },
-        "outputId": "999f6d12-8505-4c17-927f-33dd4fa9bc84"
+        "outputId": "05c42a27-6b61-476d-8c8d-f6a8c89ae38b"
       },
       "source": [
         "#Pivot Table for Flight Data\n",
-        "flight_pivot\n",
-        "\n",
-        "\n"
+        "flight_pivot"
       ],
-      "execution_count": 469,
+      "execution_count": 497,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1261,7 +1263,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 469
+          "execution_count": 497
         }
       ]
     },
@@ -1274,29 +1276,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "0da6d6b3-c4f8-48d0-a26c-8d62600a595c"
+        "outputId": "a4d0f1e1-8e67-4a4f-80d9-61eef572d096"
       },
       "source": [
         "# You've done it right if you get 112 passengers for January 1949 and 432 passengers for December 1960.\n",
         "\n",
         "Jan_1949 = flight_pivot.ix[1949]['January'] == 112\n",
-        "\n",
-        "if Jan_1949:\n",
-        "  print('Correct Answer for January 1949')\n",
-        "  \n",
         "December_1960 = flight_pivot.ix[1960]['December'] == 432\n",
         "\n",
-        "if December_1960:\n",
-        "  print('Correct Answer for December 1960')\n",
-        "  "
+        "if Jan_1949 & December_1960:\n",
+        "  print('You got 112 passengers, which is the correct answer for January 1949')\n",
+        "  print('You got 432 passengers, which is the correct answer for December 1960')"
       ],
-      "execution_count": 471,
+      "execution_count": 505,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Correct Answer for January 1949\n",
-            "Correct Answer for December 1960\n"
+            "You got 112 passengers, which is the correct answer for January 1949\n",
+            "You got 432 passengers, which is the correct answer for December 1960\n"
           ],
           "name": "stdout"
         }
