--- a/module1-join-and-reshape-data/Eric_Rivetna_LS_DS_121_Join_and_Reshape_Data_Assignment.ipynb
+++ b/module1-join-and-reshape-data/Eric_Rivetna_LS_DS_121_Join_and_Reshape_Data_Assignment.ipynb
@@ -1276,7 +1276,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "a4d0f1e1-8e67-4a4f-80d9-61eef572d096"
+        "outputId": "38d4ccf7-4691-44b6-d61c-c7ed9459121a"
       },
       "source": [
         "# You've done it right if you get 112 passengers for January 1949 and 432 passengers for December 1960.\n",
@@ -1284,11 +1284,13 @@
         "Jan_1949 = flight_pivot.ix[1949]['January'] == 112\n",
         "December_1960 = flight_pivot.ix[1960]['December'] == 432\n",
         "\n",
+        "\n",
+        "\n",
         "if Jan_1949 & December_1960:\n",
-        "  print('You got 112 passengers, which is the correct answer for January 1949')\n",
-        "  print('You got 432 passengers, which is the correct answer for December 1960')"
+        "  print('You got {} passengers, which is the correct answer for January 1949'.format(flight_pivot.ix[1949]['January']))\n",
+        "  print('You got {} passengers, which is the correct answer for December 1960'.format(flight_pivot.ix[1960]['December']))"
       ],
-      "execution_count": 505,
+      "execution_count": 513,
       "outputs": [
         {
           "output_type": "stream",
